@@ -1,3 +1,8 @@
+2005-04-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/pthread_getcpuclockid.c: Use <> instead
+	of "" includes.
+
 2005-04-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* tst-cancel17.c (do_test): Add arbitrary factor to make sure
